Fixed sidebar alignment with content

--- a/PMSUI/src/app/Modules/Core/pms-navigation/pms-navigation/pms-navigation.component.css
+++ b/PMSUI/src/app/Modules/Core/pms-navigation/pms-navigation/pms-navigation.component.css
@@ -1,13 +1,12 @@
 #sidebar {
-  min-width: 250px;
+  min-width: 200px;
   max-width: 250px;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
+  margin-right: 20px;
   /* top layer */
-  z-index: 9999;
 }
-.wrapper {
-  display: block;
+
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
 }
